# voting-app

./: BACKEND.md  DOCS.md  Dockerfile  FIXES.md  README.md  data.py  database.sqlite3  docker-compose.yaml  main.py  pyproject.toml
api/: __init__.py  dependencies.py
api/v1/: __init__.py  admin.py  member.py  team.py  voting.py
core/: config.py  get_db.py
core/db_models/: __init__.py  member.py  team.py
core/schemas/: __init__.py  member.py  team.py
frontend/: .dockerignore  .gitignore  Dockerfile  FRONTEND_SUMMARY.md  README.md  admin.html  index.html  nginx.conf  package-lock.json  package.json  register.html  results.html  vite.config.ts  vote.html
frontend/css/: styles.css
frontend/js/: api.js  main.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/common/: AnimatedLayout.tsx  Navigation.tsx  QRCodeGenerator.tsx
frontend/src/hooks/: api.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResultsPage.tsx  VotingPage.tsx
frontend/src/types/: index.ts
nginx/ssl/: dhparam.pem  server.crt  server.key
tests/: conftest.py  test_admin.py  test_member.py  test_team.py
